@@ -23,27 +23,22 @@
 
 /*
  * @test
- * @bug 8087112
- * @library /lib/testlibrary
+ * @bug 8087112 8159814
+ * @library /lib/testlibrary server
  * @build jdk.testlibrary.SimpleSSLContext
- * @modules java.httpclient
- * @compile/module=java.httpclient java/net/http/BodyOutputStream.java
- * @compile/module=java.httpclient java/net/http/BodyInputStream.java
- * @compile/module=java.httpclient java/net/http/PushHandler.java
- * @compile/module=java.httpclient java/net/http/Http2Handler.java
- * @compile/module=java.httpclient java/net/http/Http2TestExchange.java
- * @compile/module=java.httpclient java/net/http/Http2TestServerConnection.java
- * @compile/module=java.httpclient java/net/http/Http2TestServer.java
- * @compile/module=java.httpclient java/net/http/OutgoingPushPromise.java
- * @compile/module=java.httpclient java/net/http/TestUtil.java
- * @run testng/othervm -Djava.net.http.HttpClient.log=requests,responses ServerPush
+ * @modules jdk.incubator.httpclient/jdk.incubator.http.internal.common
+ *          jdk.incubator.httpclient/jdk.incubator.http.internal.frame
+ *          jdk.incubator.httpclient/jdk.incubator.http.internal.hpack
+ * @run testng/othervm -Djdk.httpclient.HttpClient.log=errors,requests,responses ServerPush
  */
 
 import java.io.*;
 import java.net.*;
 import java.nio.file.*;
 import java.nio.file.attribute.*;
-import java.net.http.*;
+import jdk.incubator.http.*;
+import jdk.incubator.http.HttpResponse.MultiProcessor;
+import jdk.incubator.http.HttpResponse.BodyHandler;
 import java.util.*;
 import java.util.concurrent.*;
 import org.testng.annotations.Test;
@@ -53,42 +48,57 @@ public class ServerPush {
     static ExecutorService e = Executors.newCachedThreadPool();
 
     static final int LOOPS = 13;
-    static final int FILE_SIZE = 32 * 1024;
+    static final int FILE_SIZE = 512 * 1024 + 343;
 
     static Path tempFile;
 
     @Test(timeOut=30000)
     public static void test() throws Exception {
         Http2TestServer server = null;
-        Path dir = null;
+        final Path dir = Files.createTempDirectory("serverPush");
         try {
-            server = new Http2TestServer(false, 0,
-                                         new PushHandler(FILE_SIZE, LOOPS));
+            server = new Http2TestServer(false, 0);
+            server.addHandler(new PushHandler(FILE_SIZE, LOOPS), "/");
             tempFile = TestUtil.getAFile(FILE_SIZE);
 
             System.err.println("Server listening on port " + server.getAddress().getPort());
             server.start();
             int port = server.getAddress().getPort();
-            dir = Files.createTempDirectory("serverPush");
 
-            URI uri = new URI("http://127.0.0.1:" + Integer.toString(port) + "/foo");
-            HttpRequest request = HttpRequest.create(uri)
-                    .version(HttpClient.Version.HTTP_2)
-                    .GET();
+            // use multi-level path
+            URI uri = new URI("http://127.0.0.1:" + port + "/foo/a/b/c");
+            HttpRequest request = HttpRequest.newBuilder(uri).GET().build();
 
-            CompletableFuture<Map<URI,Path>> cf =
-            request.multiResponseAsync(HttpResponse.multiFile(dir));
-            Map<URI,Path> results = cf.get();
+            CompletableFuture<MultiMapResult<Path>> cf =
+                HttpClient.newBuilder().version(HttpClient.Version.HTTP_2)
+                    .executor(e).build().sendAsync(
+                        request, MultiProcessor.asMap((req) -> {
+                            URI u = req.uri();
+                            Path path = Paths.get(dir.toString(), u.getPath());
+                            try {
+                                Files.createDirectories(path.getParent());
+                            } catch (IOException ee) {
+                                throw new UncheckedIOException(ee);
+                            }
+                            return Optional.of(BodyHandler.asFile(path));
+                        }
+                    ));
+            MultiMapResult<Path> results = cf.get();
 
             //HttpResponse resp = request.response();
             System.err.println(results.size());
-            Set<URI> uris = results.keySet();
-            for (URI u : uris) {
-                Path result = results.get(u);
+            Set<HttpRequest> requests = results.keySet();
+
+            for (HttpRequest r : requests) {
+                URI u = r.uri();
+                Path result = results.get(r).get().body();
                 System.err.printf("%s -> %s\n", u.toString(), result.toString());
                 TestUtil.compareFiles(result, tempFile);
             }
-            System.out.println("TEST OK");
+            if (requests.size() != LOOPS + 1)
+                throw new RuntimeException("some results missing");
+            System.out.println("TEST OK: sleeping for 5 sec");
+            Thread.sleep (5 * 1000);
         } finally {
             e.shutdownNow();
             server.stop();
